[metadata]
name = tzgrid
version = 0.0.1
author = David Britton
author-email = davidpbritton@gmail.com
summary = Timezone grid application
description-file = README.md
home-page = http://github.com/dpb1/tzgrid
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3
    Programming Language :: Python

[options]
scripts =
    tzgrid
